--- a/about/index.html
+++ b/about/index.html
@@ -373,7 +373,7 @@
 
 
 <div class="statis">
-    <span class="count"><a href="/categories">6</a></span>
+    <span class="count"><a href="/categories">5</a></span>
     <span class="name">Categories</span>
 </div>
 
@@ -403,7 +403,7 @@
 
 
 <div class="statis">
-    <span class="count"><a href="/categories">6</a></span>
+    <span class="count"><a href="/categories">5</a></span>
     <span class="name">Categories</span>
 </div>
 
@@ -604,7 +604,7 @@
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"Huangshan","value":2},{"name":"Chinese course","value":1},{"name":"Chinese Poems","value":20},{"name":"Chinese Poems ","value":1},{"name":"Chinese Idioms ","value":2},{"name":"Encyclopedia of China ","value":1}],
+                data: [{"name":"Huangshan","value":2},{"name":"Chinese course","value":1},{"name":"Chinese Poems","value":21},{"name":"Chinese Idioms ","value":2},{"name":"Encyclopedia of China ","value":1}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
