--- a/friends/index.html
+++ b/friends/index.html
@@ -599,12 +599,12 @@
                                     <div class="title">
                                         <img src="/medias/images/leansoft.png" alt="img">
                                         <div>
-                                            <h1 class="friend-name">LeanSoft</h1>
-                                            <p style="position: relative;top: -35px;">InfoTech Co.,Ltd.</p>
+                                            <h1 class="friend-name">兰波</h1>
+                                            <p style="position: relative;top: -35px;">LeanLab Ltd.</p>
                                         </div>
                                     </div>
                                     <div class="friend-button">
-                                        <a href="https://leanframe.github.io/" target="_blank"
+                                        <a href="https://leaninfo.github.io/" target="_blank"
                                             class="button button-glow button-rounded button-caution">
                                             Learning More
                                         </a>
