--- a/friends/index.html
+++ b/friends/index.html
@@ -555,7 +555,7 @@
                             <div class="card frind-card1">
                                 <div class="frind-ship">
                                     <div class="title">
-                                        <img src="/medias/images/leanessays.png" alt="img">
+                                        <img src="https://leanclass.github.io/medias/images/Leanessays.png" alt="img">
                                         <div>
                                             <h1 class="friend-name">随笔</h1>
                                             <p style="position: relative;top: -35px;">Lean&#39;s Essays</p>
@@ -576,7 +576,7 @@
                             <div class="card frind-card2">
                                 <div class="frind-ship">
                                     <div class="title">
-                                        <img src="/medias/images/leanclass.png" alt="img">
+                                        <img src="https://leanclass.github.io/medias/images/Leanclass.png" alt="img">
                                         <div>
                                             <h1 class="friend-name">诗词</h1>
                                             <p style="position: relative;top: -35px;">任尔东西南北风</p>
@@ -597,7 +597,7 @@
                             <div class="card frind-card3">
                                 <div class="frind-ship">
                                     <div class="title">
-                                        <img src="/medias/images/leansoft.png" alt="img">
+                                        <img src="https://leanclass.github.io/medias/images/Leansoft.png" alt="img">
                                         <div>
                                             <h1 class="friend-name">兰波</h1>
                                             <p style="position: relative;top: -35px;">LeanLab Ltd.</p>
