--- a/friends/index.html
+++ b/friends/index.html
@@ -705,8 +705,8 @@
                                     <div class="title">
                                         <img src="https://leanclass.github.io/medias/images/Leanessays.png" alt="img">
                                         <div>
-                                            <h1 class="friend-name">随笔</h1>
-                                            <p style="position: relative;top: -35px;">Lean&#39;s Essays</p>
+                                            <h1 class="friend-name">子先居</h1>
+                                            <p style="position: relative;top: -35px;">信息前沿</p>
                                         </div>
                                     </div>
                                     <div class="friend-button">
@@ -726,8 +726,8 @@
                                     <div class="title">
                                         <img src="https://leanclass.github.io/medias/images/Leanclass.png" alt="img">
                                         <div>
-                                            <h1 class="friend-name">诗词</h1>
-                                            <p style="position: relative;top: -35px;">任尔东西南北风</p>
+                                            <h1 class="friend-name">梦溪园</h1>
+                                            <p style="position: relative;top: -35px;">诗词百科</p>
                                         </div>
                                     </div>
                                     <div class="friend-button">
@@ -747,7 +747,7 @@
                                     <div class="title">
                                         <img src="https://leanclass.github.io/medias/images/Leansoft.png" alt="img">
                                         <div>
-                                            <h1 class="friend-name">兰波</h1>
+                                            <h1 class="friend-name">LeanLab Ltd.</h1>
                                             <p style="position: relative;top: -35px;">LeanLab Ltd.</p>
                                         </div>
                                     </div>
