--- a/friends/index.html
+++ b/friends/index.html
@@ -790,7 +790,7 @@
                                         <img src="https://leanclass.github.io/medias/images/sharelogo.png" alt="img">
                                         <div>
                                             <h1 class="friend-name">你的位置</h1>
-                                            <p style="position: relative;top: -35px;">Lane&#39;s Docs</p>
+                                            <p style="position: relative;top: -35px;">Link Share</p>
                                         </div>
                                     </div>
                                     <div class="friend-button">
@@ -811,7 +811,7 @@
                                         <img src="https://leanclass.github.io/medias/images/sharelogo.png" alt="img">
                                         <div>
                                             <h1 class="friend-name">你的位置</h1>
-                                            <p style="position: relative;top: -35px;">Lane&#39;s Docs</p>
+                                            <p style="position: relative;top: -35px;">Link Share</p>
                                         </div>
                                     </div>
                                     <div class="friend-button">
