--- a/about/index.html
+++ b/about/index.html
@@ -775,7 +775,7 @@
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"Various","value":4},{"name":"Huangshan","value":1},{"name":"East Asia","value":9},{"name":"China","value":10},{"name":"Chinese Poems","value":60},{"name":"Sinology","value":3},{"name":"Biography","value":1},{"name":"Riddles","value":2},{"name":"Mathematics","value":1},{"name":"Chinese course","value":1},{"name":"Recommend books","value":2},{"name":"Hui Culture","value":1},{"name":"Chinese Idioms","value":3},{"name":"Scholar's nickname","value":1},{"name":"Encyclopedia of China","value":2},{"name":"Proverb","value":1},{"name":"System integration project management","value":5}],
+                data: [{"name":"Various","value":4},{"name":"Huangshan","value":1},{"name":"East Asia","value":9},{"name":"China","value":10},{"name":"Chinese Poems","value":60},{"name":"Sinology","value":3},{"name":"Biography","value":1},{"name":"Riddles","value":2},{"name":"Mathematics","value":1},{"name":"Chinese course","value":1},{"name":"Recommend books","value":2},{"name":"Hui Culture","value":1},{"name":"Chinese Idioms","value":3},{"name":"Scholar's nickname","value":1},{"name":"Encyclopedia of China","value":2},{"name":"Proverb","value":1},{"name":"PMP","value":6}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
@@ -812,7 +812,7 @@
                 type: 'bar',
                 color: ['#82d3f4'],
                 barWidth : 18,
-                data: [62,10,9,7,7,5,4,4,3,3],
+                data: [62,10,9,7,7,6,4,4,3,3],
                 markPoint: {
                     symbolSize: 45,
                     data: [{
